<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_demo</name>
  <version>3.1.0</version>
  <description>
  Totota Prius Hybrid car demo, adapted for the ADAS "Audi" Model car at the Fachhochschule Wedel.

  Needs ros-humble-gazebo-plugins.
  Source /usr/share/gazebo/setup.sh before executing launchfile.
  </description>
  <maintainer email="hermann.hoehne@fh-wedel.de">Hermann Höhne</maintainer>
  <license>APACHE 2.0</license>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>prius_msgs</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>prius_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
