<?xml version="1.0"?>
<package format="2">
  <name>fhw_prius_adas_adapter</name>
  <version>0.0.0</version>
  <description>The fhw_prius_adas_adapter package</description>
  <maintainer email="hermann.hoehne@fh-wedel.de">Hermann Höhne</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>prius_msgs</depend>
</package>
