<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fhw_prius_adas_adapter</name>
  <version>3.0.0</version>
  <description>The fhw_prius_adas_adapter package</description>
  <maintainer email="hermann.hoehne@fh-wedel.de">Hermann Höhne</maintainer>
  <url type="repository">https://github.com/FHW-AutonomousDriving/simulation</url>
  <license>GPLv3</license>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>prius_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
