<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prius_description</name>
  <version>3.0.0</version>
  <description>
  Provides a URDF for a prius
  </description>
  <maintainer email="hermann.hoehne@fh-wedel.de">Hermann Höhne</maintainer>
  <author email="sloretz@openrobotics.org">shane loretz</author>
  <license>APACHE 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/.." gazebo_model_path="${prefix}/.."/>
  </export>
</package>
