<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prius_msgs</name>
  <version>3.0.0</version>
  <description>
  Messages for controlling "Prius" ADAS model car
  </description>
  <maintainer email="hermann.hoehne@fh-wedel.de">Hermann Höhne</maintainer>
  <license>APACHE 2.0</license>
  <depend>std_msgs</depend>
  <!-- https://docs.ros.org/en/foxy/Tutorials/Custom-ROS2-Interfaces.html#create-custom-definitions -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
